<resources>
    <string name="app_name">Energía, Ambiente, y Sostenibilidad</string>
    <string name="titulo_app">Energía, Ambiente, y Sostenibilidad</string>
    <string name="titulo_login">Inicio de sesión</string>
    <string name="error_login_obligatorio">Ingrese DNI</string>
    <string name="login_hint_dni">DNI</string>
    <string name="login_hint_clave">Clave</string>
    <string name="login_btn_entrar">Entrar</string>
    <string name="login_btn_registro">Registrar usuario</string>
    <string name="login_btn_olvido">Olvidé contraseña</string>
    <string name="nextButtonTitle">Siguiente</string>
    <string name="backButtonTitle">Anterior</string>

    <string name="ingrese_nombres">Ingrese nombres</string>
    <string name="nombres">Nombres:</string>
    <string name="apellido_paterno">Apellido Paterno:</string>
    <string name="ingrese_apellido_paterno">Ingrese apellido paterno</string>
    <string name="dni">DNI:</string>
    <string name="ingrese_dni">Ingrese DNI</string>
    <string name="apellido_materno">Apellido Materno:</string>
    <string name="ingrese_apellido_materno">Ingrese apellido materno</string>
    <string name="este_campo_es_obligatorio">Este campo es obligatorio</string>
    <string name="datos_personales">Datos Personales</string>
    <string name="datos_adicionales">Datos Adicionales</string>
    <string name="ubigeo">Ubigeo</string>
    <string name="credenciales">Credenciales</string>
    <string name="telefono">Telefono:</string>
    <string name="ingrese_telefono">Ingrese telefono:</string>
    <string name="direccion">Direccion:</string>
    <string name="ingrese_direccion">Ingrese direccion</string>
    <string name="numero_contrato">Numero contrato:</string>
    <string name="ingrese_numero_contrato">Ingrese numero de contrato</string>
    <string name="departamento">Departamento:</string>
    <string name="provincia">Pronvicia:</string>
    <string name="distrito">Distrito:</string>
    <string name="centroPoblado">Centro Poblado:</string>
    <string name="comunidadParcialidad">Comunidad/Parcialidad:</string>
    <string name="sector">Sector:</string>
    <string name="contrasenia">Contraseña:</string>
    <string name="ingrese_contrasenia">Ingrese contraseña</string>
    <string name="registrar_usuario">Registrar Usuario</string>
    <string name="registrar_lectura">Registrar Lectura y Recibo</string>
    <string name="asignar_medidor">Asignar Medidor</string>
    <string name="registrar_egreso">Registrar Egreso</string>
    <string name="registrar_ingreso">Registrar Ingreso</string>
    <string name="gestion_de_lecturas">Gestion de Lecturas</string>
    <string name="reportes">Reportes</string>
    <string name="tipo_ingreso">Tipo Ingreso:</string>
    <string name="monto">Monto:</string>
    <string name="ingrese_monto">Ingrese monto</string>
    <string name="descripcion">Descripcion:</string>
    <string name="ingrese_descripcion">Ingrese descripcion</string>
    <string name="tipo_egreso">Egreso:</string>
    <string name="lbl_codigo_medidor">Código Medidor:</string>
    <string name="lectura_actual">Lectura Actual:</string>
    <string name="ingrese_lectura_actual">Ingrese lectura actual</string>
    <string name="hint_ingrese_codigo_medidor">#######</string>
    <string name="btn_registrar_lectura">Guardar Lectura</string>
    <string name="btn_registrar_egreso">Registrar Egreso</string>
    <string name="btn_registrar_ingreso">Registrar Ingreso</string>
    <string name="btn_asignar_medidor">Asignar Medidor</string>
    <string name="hint_ingrese_dni_usuario">Ingrese DNI</string>
    <string name="lbl_dni_usuario">DNI Usuario:</string>
    <string name="comunidadNativa">Comunidad Nativa:</string>
    <string name="pendiente_implementar">PENDIENTE IMPLEMENTAR...</string>
    <string name="detectar_anomalias">Detectar Anomalias</string>
    <string name="btn_resetear_contrasena">Resetear Contraseña</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tabs_asignar_medidor">Asignación de medidores</string>
    <string name="colNombres">Nombres</string>
    <string name="colDni">DNI</string>
    <string name="colCodigoMedidor">Código Medidor</string>
    <string name="indicador_asignacion_medidor">Indicador de asignacion de medidor</string>
    <string name="tamanio_titulo_tabla">16</string>
    <string name="btnInicio_desc">Inicio</string>
    <string name="btnAtras_desc">Atrás</string>
    <string name="btnAdelante_desc">Adelante</string>
    <string name="btnFinal_desc">Final</string>
    <string name="tarifas">Tarifa</string>
    <string name="guardar_tarifa">Guardar Tarifa</string>
    <string name="ingrese_codigo_tarifa">Ingrese código de tarifa</string>
    <string name="ingrese_tarifa">Ingrese tarifa</string>
    <string name="ingrese_descripcion_tarifa">Ingrese descripción de tarifa</string>
    <string name="codigo_tarifa">Código tarifa:</string>
    <string name="descripcion_tarifa">Descripción de Tarifa:</string>
    <string name="monto_tarifa">Monto de Tarifa:</string>
    <string name="lectura_anterior">Lectura Anterior:</string>
    <string name="ingrese_lectura_anterior">Lectura anterior</string>
    <string name="ingrese_fecha_lectura">Fecha lectura</string>
    <string name="fecha_lectura">Fecha Lectura:</string>
    <string name="recibo">Número Recibo:</string>
    <string name="ingrese_recibo">Número de recibo</string>
    <string name="m3consumidos">M3 Consumidos:</string>
    <string name="ingrese_m3consumidos">Cantidad consumido</string>
    <string name="monto_total">Monto Total:</string>
    <string name="ingrese_monto_total">Monto a pagar</string>
    <string name="fecha_limite_pago">Fecha Límite Pago:</string>
    <string name="ingrese_fecha_limite_pago">Fecha para pagar</string>
    <string name="pagado">Pagado</string>
    <string name="btn_imprimir_recibo">Imprimir Recibo</string>
    <string name="nuevo">Nuevo</string>
    <string name="btnBuscar_desc">Buscar</string>
    <string name="usuario_no_encontrado">Usuario no está registrado</string>
    <string name="btnSeleccionarFechaLectura">Seleccionar Fecha Lectura</string>
    <string name="imprimir_padron_de_usuarios">Imprimir Padron de Usuarios</string>
    <string name="imprimir_balance_por_usuario">Imprimir Balance por Usuario</string>
    <string name="imprimir_pagos_de_recibos">Imprimir Pagos de Recibos</string>
    <string name="imprimir_egresos">Imprimir Egresos</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="btnRegistrar">Registrar</string>
    <string name="hint_codigo_del_medidor">Código del medidor</string>
    <string name="lblIngreseCodigoMedidor">Ingrese el código del medidor:</string>
    <string name="lblAsignarMedidor">Asignar medidor</string>
    <string name="lblDeseaEliminarAsignacionMedidor">¿Desea eliminar asignación del medidor?</string>
    <string name="btnEliminarAsignacionMedidor">Eliminar Asignacion Medidor</string>
    <string name="cargaDatos">Carga de Datos</string>
    <string name="seleccionar_archivo_excel">Seleccione Archivo Excel</string>
    <string name="archivo_no_seleccionado" />
    <string name="btnGuardarUsuarios">Guardar Usuarios</string>
    <string name="imprimir_ingresos">Imprimir Ingresos</string>

</resources>