<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".RegistrarLecturaPorDniFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical">
            <TextView
                android:id="@+id/lblDniUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_dni_usuario"
                android:textStyle="bold"
                android:layout_marginTop="24dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/txtDniUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:autofillHints=""
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray"
                    android:hint="@string/hint_ingrese_dni_usuario"
                    android:maxLength="255"
                    android:inputType="number"/>

                <TextView
                    android:id="@+id/lblNombreUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/tvErrorDniUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_red_dark"
                    android:visibility="gone"/>
            </LinearLayout>

            <ImageButton
                android:id="@+id/btnBuscarPorDni"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_magnify"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/btnBuscar_desc"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical">
            <TextView
                android:id="@+id/lblCodigoMedidor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_codigo_medidor"
                android:textStyle="bold"
                android:layout_marginTop="24dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/txtCodigoMedidor"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:autofillHints=""
                    android:paddingHorizontal="10dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray"
                    android:hint="@string/hint_ingrese_codigo_medidor"
                    android:maxLength="255"
                    android:inputType="number"/>

                <TextView
                    android:id="@+id/tvErrorCodigoMedidor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_red_dark"
                    android:visibility="gone"/>
            </LinearLayout>

            <ImageButton
                android:id="@+id/btnBuscarPorCodigo"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_magnify"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/btnBuscar_desc"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical">
            <TextView
                android:id="@+id/lblLecturaActual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lectura_actual"
                android:textStyle="bold"
                android:layout_marginTop="24dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/txtLecturaActual"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:autofillHints=""
                    android:paddingHorizontal="10dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray"
                    android:hint="@string/ingrese_lectura_actual"
                    android:maxLength="18"
                    android:inputType="numberDecimal"/>

                <TextView
                    android:id="@+id/tvErrorLecturaActual"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_red_dark"
                    android:visibility="gone"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/lblLecturaAnterior"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lectura_anterior"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/txtLecturaAnterior"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints=""
                android:paddingHorizontal="10dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:hint="@string/ingrese_lectura_anterior"
                android:maxLength="18"
                android:inputType="numberDecimal"
                android:enabled="false"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/lblFechaLectura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha_lectura"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/txtFechaLectura"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints=""
                android:paddingHorizontal="10dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:hint="@string/ingrese_fecha_lectura"
                android:maxLength="18"
                android:inputType="number"
                android:enabled="false"/>

            <ImageButton
                android:id="@+id/btnFechaLectura"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_calendar_range"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/btnSeleccionarFechaLectura"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/lblRecibo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recibo"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/txtRecibo"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:autofillHints=""
                android:paddingHorizontal="10dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:hint="@string/ingrese_recibo"
                android:maxLength="18"
                android:inputType="number"
                android:enabled="false"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/lblM3Consumidos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m3consumidos"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/txtM3Consumidos"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints=""
                android:paddingHorizontal="10dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:hint="@string/ingrese_m3consumidos"
                android:maxLength="18"
                android:inputType="number"
                android:enabled="false"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/lblMontoTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monto_total"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/txtMontoTotal"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints=""
                android:paddingHorizontal="10dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:hint="@string/ingrese_monto_total"
                android:maxLength="18"
                android:inputType="number"
                android:enabled="false"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/lblFechaLimitePago"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha_limite_pago"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/txtFechaLimitePago"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints=""
                android:paddingHorizontal="10dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:hint="@string/ingrese_fecha_limite_pago"
                android:inputType="date"
                android:enabled="false"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/chkPagado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/lblPagado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pagado"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">
            <ImageButton
                android:id="@+id/btnInicio"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_page_first"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/btnInicio_desc"
                android:layout_marginHorizontal="15dp"/>

            <ImageButton
                android:id="@+id/btnAtras"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_chevron_left"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/btnAtras_desc"
                android:layout_marginHorizontal="15dp"/>

            <ImageButton
                android:id="@+id/btnAdelante"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_chevron_right"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/btnAdelante_desc"
                android:layout_marginHorizontal="15dp"/>

            <ImageButton
                android:id="@+id/btnFinal"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_page_last"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/btnFinal_desc"
                android:layout_marginHorizontal="15dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">
            <Button
                android:id="@+id/btnNuevo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nuevo"
                android:backgroundTint="@color/buttonBackgroundColor"
                android:textColor="@color/buttonTextColor"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="15dp"/>

            <Button
                android:id="@+id/btnDetectarAnomalias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detectar_anomalias"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="15dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">
            <Button
                android:id="@+id/btnRegistrarLectura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/buttonBackgroundColor"
                android:text="@string/btn_registrar_lectura"
                android:textColor="@color/buttonTextColor"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="15dp"/>

            <Button
                android:id="@+id/btnImprimirRecibo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/buttonBackgroundColor"
                android:text="@string/btn_imprimir_recibo"
                android:textColor="@color/buttonTextColor"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="15dp"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
