<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@android:color/white"
    android:gravity="center_vertical">

    <ImageView
        android:id="@+id/imgChecked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/indicador_asignacion_medidor"
        android:src="@drawable/ic_check_circle"
        android:visibility="gone" />

    <TextView
        android:id="@+id/txtDniUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/colDni"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"/>

    <TextView
        android:id="@+id/txtCodigoMedidor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/colCodigoMedidor"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"/>

    <TextView
        android:id="@+id/txtNombreUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/colNombres"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"/>

</LinearLayout>