<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryLightColor"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/titulo_app"
        android:textColor="@color/primaryDarkColor"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/titulo_app"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/titulo_login"
        android:textColor="@color/primaryDarkColor"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/error_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/error_login_obligatorio"
        android:textColor="@color/errorColor"
        android:textSize="16sp"
        android:visibility="gone"
        android:layout_marginBottom="5dp" />

    <EditText
        android:id="@+id/dni_input"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="10dp"
        android:background="@color/editTextBackgroundColor"
        android:hint="@string/login_hint_dni"
        android:inputType="number"
        android:maxLength="8"
        android:autofillHints="username"
        android:paddingHorizontal="10dp"
        android:textColor="@color/editTextTextColor"/>

    <!--EditText
        android:id="@+id/clave_input"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="10dp"
        android:background="@color/editTextBackgroundColor"
        android:hint="@string/login_hint_clave"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:paddingHorizontal="10dp"
        android:textColor="@color/editTextTextColor"/-->

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_btn_entrar"
        android:backgroundTint="@color/buttonBackgroundColor"
        android:textColor="@color/buttonTextColor"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/registro_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_btn_registro"
        android:backgroundTint="@color/accentColor"
        android:textColor="@color/buttonTextColor"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/olvide_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_btn_olvido"
        android:backgroundTint="@color/accentColor"
        android:textColor="@color/buttonTextColor"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large" />
</LinearLayout>
